Last working version

--- a/src/index.css
+++ b/src/index.css
@@ -343,3 +343,32 @@ body,
   justify-content: center;
   align-items: center;
 }
+
+/* Neutralize browser autofill styles so inputs keep custom appearance */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-text-fill-color: currentColor;
+  caret-color: currentColor;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 9999s ease-in-out 0s, color 9999s ease-in-out 0s;
+}
+
+/* Firefox */
+input:-moz-autofill,
+textarea:-moz-autofill,
+select:-moz-autofill {
+  box-shadow: 0 0 0px 1000px transparent inset;
+  background-color: transparent !important;
+  color: currentColor !important;
+}
+
+/* Future/standard selector (safe no-op where unsupported) */
+input:autofill,
+textarea:autofill,
+select:autofill {
+  box-shadow: 0 0 0px 1000px transparent inset;
+}
